# house-defect-captioning

./: .gitignore  ARCHITECTURE.md  README.md  build_log.txt  index.html  lint_output.txt  package-lock.json  package.json  start_tunnel.sh  tailwind.config.js  vite.config.ts
.agent/workflows/: import-globals.md  uv-init.md
backend/: app.py  check_schema.py  config.py  debug_model.py  engine.py  main.py  migrate_v2.py  models.py  pdf_generator.py  pyproject.toml  test_api.py  test_api_pdf.py  test_db_integration.py  test_pdf.py  test_update_sync.py  tokenizer.py
dev-dist/: sw.js
public/: summary_report.html
src/: config.ts  index.css  main.tsx  vite-env.d.ts
src/components/: Dashboard.tsx  DefectCard.tsx  DefectDetailModal.tsx  MobileNav.tsx  ProjectManager.tsx  ProxiedImage.tsx  SkeletonCard.tsx  StatCard.tsx  UploadZone.tsx
src/components/views/: HistoryView.tsx  HomeView.tsx  ReportView.tsx
src/hooks/: useDefectAnalysis.ts
src/lib/: store.ts
src/lib/mappers/: defectMapper.ts
src/services/: apiFetch.ts  captioningService.ts  defectService.ts  projectService.ts
src/types/: defect.ts
